<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="preferences_input_title_reqpwd">Request password</string>
    <string name="pleaseWait">Please wait</string>

<color name="hopkins_blue">#00276FFF</color>
<color name="background">#FFFFFF</color>
    
<string name="app_name">eMOCHA</string>

<!-- log in screen -->
<string name="label_welcome">Welcome to eMOCHA</string>
<string name="label_username">Username</string>
<string name="label_password">Password</string>
<string name="label_login">Log in</string>

<!-- main menu -->
<string name="label_main_menu">Welcome. What would you like to do today?</string>
<string name="but_call">Make call</string>
<string name="but_training">Training</string>
<string name="but_add_patient">New patient</string>
<string name="but_upd_patient">Update patient</string>
<string name="but_help">Help using the phone</string>

<!-- call menu -->
<string name="label_call_menu">Make a call</string>
<string name="but_call_consult">Consultation</string>
<string name="but_call_clinic">Hospital or clinic</string>
<string name="but_call_other">Other numbers</string>

<!-- help -->
<string name="label_help">Help</string>
<string name="help_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean convallis laoreet sem eu laoreet. Morbi faucibus magna sit amet ante lobortis vestibulum. Nulla hendrerit ultrices rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas elementum mi sit amet purus malesuada a pretium libero convallis. Proin eget turpis nunc, a venenatis odio. Sed eget tortor et elit sagittis varius sed vitae enim. Curabitur lectus felis, aliquam ac congue et, condimentum ut velit. Fusce nibh ante, ullamcorper a malesuada eget, volutpat ut sapien. Etiam aliquet consequat ligula, sit amet venenatis mauris dapibus in. Nunc eu sapien nunc, quis porta purus. Pellentesque libero libero, malesuada eu pulvinar eget, vulputate a nunc. Quisque venenatis interdum porta. Donec in dui lorem. Proin et tempus libero. Quisque nec sem et felis sodales luctus id non nunc. Vivamus lacus lorem, suscipit a tempus eget, interdum in nibh. Integer vel urna vel mi pulvinar rutrum eget et purus. Nunc adipiscing dui sit amet ante sollicitudin congue.

Aenean iaculis convallis enim eget fermentum. Nullam enim orci, placerat vel pharetra sit amet, congue ut augue. Maecenas quis lorem in ligula vehicula ornare non et turpis. Integer a lacus sit amet quam sagittis auctor tristique semper ipsum. Aenean mi ligula, bibendum eget semper mollis, mattis ac lectus. Duis velit mauris, tempus a dignissim vel, tempor nec erat. Proin adipiscing condimentum bibendum. Fusce pharetra commodo tincidunt. Sed nibh nisl, aliquam nec cursus vel, ultrices vitae sem. Proin posuere ligula varius magna ultrices at volutpat felis ultrices. Curabitur vulputate ante quis sem pretium non elementum massa mattis. Praesent libero ipsum, consequat eget interdum vel, lobortis sed nisi. Lorem ipsum dolor sit amet, consectetur adipiscing elit.

Sed molestie, tortor nec egestas cursus, massa tellus ultricies elit, quis iaculis tortor libero ut libero. Ut et ante nec lacus sollicitudin cursus eget eu nulla. Proin ante enim, sodales tempor faucibus sit amet, luctus vitae nulla. Etiam luctus aliquet turpis sed iaculis. Proin dictum dolor vehicula turpis dapibus vel congue urna mollis. In in mattis tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer semper purus non enim pellentesque rutrum malesuada diam feugiat. Suspendisse tristique condimentum consectetur. Sed et lacus ultrices nisi commodo pulvinar ut a ante. Donec quis turpis eu tortor sodales hendrerit eu id lacus. Praesent consequat, sem eu pharetra malesuada, nibh nibh tristique sem, sed feugiat magna metus nec arcu. Aenean ullamcorper dapibus congue. Suspendisse dapibus felis id mi malesuada dignissim. Aliquam sapien risus, convallis sit amet aliquam at, dignissim quis enim. Nulla adipiscing, augue nec varius ornare, mi massa suscipit tellus, in placerat dolor nibh dictum arcu. Integer auctor metus quis augue blandit porttitor. Vivamus feugiat fringilla metus, at luctus nibh rutrum non. Nam quis ipsum nunc. 
</string>

<!-- training menu -->
<string name="label_training_menu">Choose training type</string>
<string name="label_training_library">Choose a book</string>
<string name="label_training_lectures">Choose a lecture</string>
<string name="label_training_courses">Choose a course</string>
<string name="but_train_lectures">Lectures</string>
<string name="but_train_courses">Courses</string>
<string name="but_train_library">Library</string>

<string name="allowed_number">+256777667444</string>
<string name="label_server_url">Server URL</string>
<string name="settings_serverURL_undefined">The server URL has not been defined yet, so I can't request a password. Please go back and set the server URL first.</string>
<string name="settings_add_phone_label">Contacting the server to activate your phone and request a password...</string>
<string name="preferences_input_summary_password">The password should be given to you by the same person that gave you the phone. It's different for each phone.</string>
<string name="preferences_input_summary_server_url">eMOCHA will communicate with the server through this HTTPS address</string>
<string name="preferences_input_title_password">Password</string>
<string name="preferences_input_title_server_url">Remote URL</string>
<string name="preferences_category_server"></string>
<string name="sql_create_database">"
CREATE TABLE sdcard (
	path TEXT, 
	ts INTEGER, 
	size INTEGER, 
	md5 TEXT, 
	to_delete INTEGER, 
	to_download INTEGER
);
"</string>
<string name="json_sample_code">'{"files":[{"path":"sdcard\\/emocha\\/odk\\/forms\\/quiz_one.xml","ts":"1253806055","size":"1391","md5":"1a4af3165356a3eff5e189844f6de5ac"},{"path":"sdcard\\/emocha\\/odk\\/forms\\/mHealth.xml","ts":"1253806054","size":"3305","md5":"442ea84bdc58793031a69a0296eb4a25"},{"path":"sdcard\\/emocha\\/training\\/lectures\\/two.jpg","ts":"1253806194","size":"65235","md5":"05055539fa12087eb209ea51e54caf43"},{"path":"sdcard\\/emocha\\/training\\/lectures\\/lecture01.jpg","ts":"1253806196","size":"75269","md5":"58de8cbfc14a034c0176550678fbbbdb"},{"path":"sdcard\\/emocha\\/training\\/lectures\\/two.mp4","ts":"1253806210","size":"890566","md5":"1745978b27b497e09ac8d894c01a143c"},{"path":"sdcard\\/emocha\\/training\\/lectures\\/three.jpg","ts":"1253806057","size":"94219","md5":"e6efd4b9f9a061de15db81138511ac00"},{"path":"sdcard\\/emocha\\/training\\/lectures\\/three.mp4","ts":"1253806193","size":"499613","md5":"758f5d3427fd2dd36f2a498a882bdc96"},{"path":"sdcard\\/emocha\\/training\\/lectures\\/lecture01.mp4","ts":"1253806184","size":"8504639","md5":"6848bb8c04d9409a01e91be2be4b3265"},{"path":"sdcard\\/emocha\\/training\\/courses\\/training01.mp4","ts":"1253806247","size":"2438334","md5":"0599a1b57d96be09af626d2ed644836d"},{"path":"sdcard\\/emocha\\/training\\/courses\\/training01.jpg","ts":"1253806249","size":"53578","md5":"2ad1b74929b1b31f390bf6baaaebf41a"},{"path":"sdcard\\/emocha\\/training\\/courses\\/one.jpg","ts":"1253806251","size":"80630","md5":"338317d5e89b15fe3b1acf5008afb4d9"},{"path":"sdcard\\/emocha\\/training\\/courses\\/one.mp4","ts":"1253806285","size":"2406533","md5":"019fb1d33eaf2c14997cde3892839d3a"},{"path":"sdcard\\/emocha\\/training\\/library\\/didanosine.html","ts":"1253806295","size":"43082","md5":"f9ed27cb5630c2e504f31e1835859b21"},{"path":"sdcard\\/emocha\\/training\\/library\\/maraviroc.html","ts":"1253806307","size":"26035","md5":"e4fb12b0ffe4c809952ad4cb41fc2084"},{"path":"sdcard\\/emocha\\/training\\/library\\/lopinavir_ritonavir.html","ts":"1253806310","size":"70765","md5":"45ac10179374e7bac4e71b09f3fd2c82"},{"path":"sdcard\\/emocha\\/training\\/library\\/lamivudine.html","ts":"1253806287","size":"25929","md5":"4c516ce05bbcb6b2ad6f7ce45d8444d3"},{"path":"sdcard\\/emocha\\/training\\/library\\/abacavir.html","ts":"1253806296","size":"34393","md5":"8b0a0828f07f0730e4c15a078ab6a308"},{"path":"sdcard\\/emocha\\/training\\/library\\/enfuvirtide.html","ts":"1253806301","size":"13040","md5":"0d77ef920ff8a0ebf0fa0e712819084f"},{"path":"sdcard\\/emocha\\/training\\/library\\/zengarden-sample.html","ts":"1253806289","size":"13759","md5":"4fe560a8d1d5374ef5d94b66cece94f4"},{"path":"sdcard\\/emocha\\/training\\/library\\/nelfinavir.html","ts":"1253806305","size":"64554","md5":"e21133954c0710c5eb4916a72aed38c0"},{"path":"sdcard\\/emocha\\/training\\/library\\/delavirdine.html","ts":"1253806286","size":"41895","md5":"40eac02c5892d4eae92a081f1828b305"},{"path":"sdcard\\/emocha\\/training\\/library\\/fosamprenavir.html","ts":"1253806290","size":"68993","md5":"c9e80ce8a0618203bea3f03ec011b694"},{"path":"sdcard\\/emocha\\/training\\/library\\/indinavir.html","ts":"1253806294","size":"59131","md5":"64a13ce792e53ff34e3e5e796b610e63"},{"path":"sdcard\\/emocha\\/training\\/library\\/efavirenz.html","ts":"1253806298","size":"73380","md5":"a4631772fcfa97d2c0c93d1be748d443"},{"path":"sdcard\\/emocha\\/training\\/library\\/atazanavir.html","ts":"1253806300","size":"67014","md5":"f08108602a1c2cc4ad04cca147fb2630"},{"path":"sdcard\\/emocha\\/training\\/library\\/darunavir.html","ts":"1253806292","size":"36791","md5":"fe41ef669e598a37ef9520f7b1de547f"},{"path":"sdcard\\/emocha\\/training\\/library\\/emtricitabine.html","ts":"1253806303","size":"23338","md5":"4f635ea07363cfeee150d8092f099c5b"},{"path":"sdcard\\/emocha\\/training\\/library\\/etravirine.html","ts":"1253806308","size":"26587","md5":"e8653b251ae82ae92b7f5371aa12fcd4"}]}'</string>
</resources>
